--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+
+        <!-- jquery plugins here-->
+        <script src="static/js/jquery-1.12.1.min.js"></script>
+        <!-- popper js -->
+        <script src="static/js/popper.min.js"></script>
+        <!-- bootstrap js -->
+        <script src="static/js/bootstrap.min.js"></script>
+        <!-- magnific popup js -->
+        <script src="static/js/jquery.magnific-popup.js"></script>
+        <!-- carousel js -->
+        <script src="static/js/owl.carousel.min.js"></script>
+        <script src="static/js/jquery.nice-select.min.js"></script>
+        <!-- slick js -->
+        <script src="static/js/slick.min.js"></script>
+        <script src="static/js/jquery.counterup.min.js"></script>
+        <script src="static/js/waypoints.min.js"></script>
+        <script src="static/js/contact.js"></script>
+        <script src="static/js/jquery.ajaxchimp.min.js"></script>
+        <script src="static/js/jquery.form.js"></script>
+        <script src="static/js/jquery.validate.min.js"></script>
+        <script src="static/js/mail-script.js"></script>
+        <!-- custom js -->
+        <script src="static/js/custom.js"></script>
     {% endblock %}
 
     {% block extra_js %}
