--- a/templates/base.html
+++ b/templates/base.html
@@ -20,24 +20,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.6.0/materia/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="static/img/favicon.png">
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- animate CSS -->
-    <link rel="stylesheet" href="static/css/animate.css">
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <!-- font awesome CSS -->
-    <link rel="stylesheet" href="static/css/all.css">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <!-- flaticon CSS -->
-    <link rel="stylesheet" href="static/css/flaticon.css">
-    <link rel="stylesheet" href="static/css/themify-icons.css">
+    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
+    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
     <!-- font awesome CSS -->
-    <link rel="stylesheet" href="static/css/magnific-popup.css">
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
     <!-- swiper CSS -->
-    <link rel="stylesheet" href="static/css/slick.css">
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <!-- style CSS -->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -50,27 +51,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
         <!-- jquery plugins here-->
-        <script src="static/js/jquery-1.12.1.min.js"></script>
+        <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
         <!-- popper js -->
-        <script src="static/js/popper.min.js"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
         <!-- bootstrap js -->
-        <script src="static/js/bootstrap.min.js"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!-- magnific popup js -->
-        <script src="static/js/jquery.magnific-popup.js"></script>
+        <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
         <!-- carousel js -->
-        <script src="static/js/owl.carousel.min.js"></script>
-        <script src="static/js/jquery.nice-select.min.js"></script>
+        <script src="{% static 'sjs/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
         <!-- slick js -->
-        <script src="static/js/slick.min.js"></script>
-        <script src="static/js/jquery.counterup.min.js"></script>
-        <script src="static/js/waypoints.min.js"></script>
-        <script src="static/js/contact.js"></script>
-        <script src="static/js/jquery.ajaxchimp.min.js"></script>
-        <script src="static/js/jquery.form.js"></script>
-        <script src="static/js/jquery.validate.min.js"></script>
-        <script src="static/js/mail-script.js"></script>
+        <script src="{% static 'js/slick.min.js' %}"></script>
+        <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+        <script src="{% static 'js/waypoints.min.js' %}"></script>
+        <script src="{% static 'js/contact.js' %}"></script>
+        <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+        <script src="{% static 'js/jquery.form.js' %}"></script>
+        <script src="{% static 'static/js/jquery.validate.min.js' %}"></script>
+        <script src="{% static 'js/mail-script.js' %}"></script>
         <!-- custom js -->
-        <script src="static/js/custom.js"></script>
+        <script src="{% static 'js/custom.js' %}"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -88,7 +89,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="#"> <img src="static/img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="{% url 'home' %}"> <img src="static/img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -98,7 +99,7 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
+                                    <a class="nav-link" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">About</a>
@@ -117,7 +118,7 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_3"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        My Membership
+                                        Art Academy
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                         {% if request.user.is_authenticated %}
@@ -131,21 +132,6 @@
                                             <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                                         {% endif %}
                                     </div>
-                                </li>
-                                
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_2"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        blog
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="#"> blog</a>
-                                        <a class="dropdown-item" href="#">Single blog</a>
-                                    </div>
-                                </li>
-                                
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -169,7 +155,7 @@
         <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner" method="GET" action="">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+                    <input type="text" class="form-control" id="search_input" name="q" placeholder="Search Here">
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
