--- a/static/sass/_menu.scss
+++ b/static/sass/_menu.scss
@@ -259,3 +259,10 @@
 .main-menu-item {
 	justify-content: center !important;
 }
+
+@media (max-width: 576px) {
+	.navbar-brand img {
+		max-width: 120px;
+		margin: 50px 0 0 0;
+	}
+}
