--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,9 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="{% url 'home' %}"> <img src="static/img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="{% url 'home' %}">
+                            <img src="{% static 'img/logo.png' %}" alt="logo">
+                        </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +109,7 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Art
+                                        Gallery
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                         <a class="dropdown-item" href="#">Paintings list</a>
@@ -118,7 +120,7 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_3"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Art Academy
+                                        Academy
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                         {% if request.user.is_authenticated %}
@@ -136,17 +138,20 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex align-items-center">
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <span>
+                                <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            </span>
+                            <span>
                             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
-                                <i class="flaticon-shopping-cart-black-shape"></i>
-                                <p class="my-0 text-center">
+                                <i class="flaticon-shopping-cart-black-shape cart-sum"> 
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }}
                                     {% else %}
                                         $0.00
                                     {% endif %}
-                                </p>
+                                </i>
                             </a>
+                        </span>
                         </div>
                     </nav>
                 </div>
