Add product detail functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                                         Gallery
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="#">All Paintings</a>
+                                        <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
                                         <a class="dropdown-item" href="#">By Category</a>
                                         <a class="dropdown-item" href="#">By Price</a>
                                         
@@ -172,7 +172,7 @@
             <!-- magnific popup js -->
             <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
             <!-- carousel js -->
-            <script src="{% static 'sjs/owl.carousel.min.js' %}"></script>
+            <script src="{% static 'js/owl.carousel.min.js' %}"></script>
             <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
             <!-- slick js -->
             <script src="{% static 'js/slick.min.js' %}"></script>
@@ -181,7 +181,7 @@
             <script src="{% static 'js/contact.js' %}"></script>
             <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
             <script src="{% static 'js/jquery.form.js' %}"></script>
-            <script src="{% static 'static/js/jquery.validate.min.js' %}"></script>
+            <script src="{% static 'js/jquery.validate.min.js' %}"></script>
             <script src="{% static 'js/mail-script.js' %}"></script>
             <!-- custom js -->
             <script src="{% static 'js/custom.js' %}"></script>
