--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,7 +32,7 @@
                                 {% else %}
                                 <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
                                 {% endif %}
-                                <h3> <a href="single-product.html">{{ product.name }}</a> </h3>
+                                <h3> <a href="{% url 'product_detail' product.id %}">{{ product.name }}</a> </h3>
                                 <p>{{ product.size }}</p>
                             </div>
                         </div>
