--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
         </div>
         <div class="search_input" id="search_input_box">
             <div class="container ">
-                <form class="d-flex justify-content-between search-inner" method="GET" action="">
+                <form class="d-flex justify-content-between search-inner" method="GET" action="{% url 'products' %}">
                     <input type="text" class="form-control" id="search_input" name="q" placeholder="Search Here">
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
