--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,90 +9,21 @@
                 <div class="col-md-5">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h1>Best quality
-                                pillow</h1>
-                            <p>Seamlessly empower fully researched 
-                                growth strategies and interoperable internal</p>
-                            <a href="product_list.html" class="btn_1">shop now</a>
+                            <h1>Hanneles Original Art</h1>
+                            <p>Why put tasteless prints on your wall </p>
+                            <p>when you can get original paintings?</p>
+                            <a href="{% url 'products' %}" class="btn_1">Buy real art here!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="banner_img">
-            <img src="img/banner.png" alt="#" class="img-fluid">
-            <img src="img/banner_pattern.png " alt="#" class="pattern_img img-fluid">
+            <img src="media/sommar.jpg" alt="#" class="img-fluid">
+            <img src="{% static 'img/banner_pattern.png' %}" alt="#" class="pattern_img img-fluid">
         </div>
     </section>
     <!-- banner part start-->
-
-    <!-- product list start-->
-    <section class="single_product_list">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="single_product_iner">
-                        <div class="row align-items-center justify-content-between">
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_product_img">
-                                    <img src="img/single_product_1.png" class="img-fluid" alt="#">
-                                    <img src="img/product_overlay.png" alt="#" class="product_overlay img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-sm-6">
-                                <div class="single_product_content">
-                                    <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
-                                        brief modern throw 
-                                        pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_product_iner">
-                        <div class="row align-items-center justify-content-between">
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_product_img">
-                                    <img src="img/single_product_2.png" class="img-fluid" alt="#">
-                                    <img src="img/product_overlay.png" alt="#" class="product_overlay img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-sm-6">
-                                <div class="single_product_content">
-                                    <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
-                                        brief modern throw 
-                                        pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_product_iner">
-                        <div class="row align-items-center justify-content-between">
-                            <div class="col-lg-6 col-sm-6">
-                                <div class="single_product_img">
-                                    <img src="img/single_product_3.png" class="img-fluid" alt="#">
-                                    <img src="img/product_overlay.png" alt="#" class="product_overlay img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-sm-6">
-                                <div class="single_product_content">
-                                    <h5>Started from $10</h5>
-                                    <h2> <a href="single-product.html">Printed memory foam 
-                                            brief modern throw 
-                                            pillow case</a> </h2>
-                                    <a href="product_list.html" class="btn_3">Explore Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- product list end-->
 
     <!-- subscribe part here -->
     <section class="subscribe_part section_padding">
@@ -126,10 +57,6 @@
                             <div class="footer_menu_item">
                                 <a href="#">Home</a>
                                 <a href="#">About</a>
-                                <a href="#">Products</a>
-                                <a href="#">Pages</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Contact</a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +80,7 @@
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
                             <div class="copyright_link">
-                                <a href="#">Privace Policy</a>
+                                <a href="#">Privacy Policy</a>
                                 <a href="#">FAQ</a>
                             </div>
                         </div>
