--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <!-- style CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- base CSS -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -83,41 +85,41 @@
                                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
+                                    <a class="nav-link" href="">about</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" href="{% url 'products' %}" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Gallery
+                                        Art Gallery
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                         <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
-                                        <a class="dropdown-item" href="#">By Category</a>
-                                        <a class="dropdown-item" href="#">By Price</a>
+                                        <a class="dropdown-item" href="">Categories</a>
                                         
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown_3"
+                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Academy
+                                        Art Academy
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                         {% if request.user.is_authenticated %}
-                                            {% if request.user.is_superuser %}
-                                                <a class="dropdown-item" href="#">Administration</a>
-                                            {% endif %}
-                                        <a class="dropdown-item" href="#">My Membership</a>
-                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                        {% else %}
-                                            <a href="{% url 'account_signup' %}" class="dropdown-item">Become a member</a>
-                                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                        {% if request.user.is_superuser %}
+                                            <a href="" class="dropdown-item">Administration</a>
                                         {% endif %}
+                                        <a href="" class="dropdown-item">My Membership</a>
+                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                    {% else %}
+                                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    {% endif %}
+
                                     </div>
                                 </li>
+
                             </ul>
-                        </div>
-                        <div class="hearer_icon d-flex align-items-center">
+                        </div>                        <div class="hearer_icon d-flex align-items-center">
                             <span>
                                 <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
                             </span>
