--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -46,10 +46,9 @@
                                     <div class="select_option">
                                         <div class="select_option_list dropdown_select">Format <i class="right fas fa-caret-down"></i> </div>
                                         <div class="select_option_dropdown">
-                                            <p><a href="{% url 'products' %}?format=portrait">Portrait</a></p>
-                                            <p><a href="{% url 'products' %}?format=landscape">Landscape</a></p>
-                                            <p><a href="{% url 'products' %}?format=square">Square</a></p>
-
+                                            <p><a href="{% url 'products' %}?format=Portrait">Portrait</a></p>
+                                            <p><a href="{% url 'products' %}?format=Landscape">Landscape</a></p>
+                                            <p><a href="{% url 'products' %}?format=Square">Square</a></p>
                                         </div>
                                     </div>
                                 </div>
