--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,3 +23,37 @@
     max-width: 120vh;
     margin: auto;
 }
+
+.single_product_item a {
+    color: #795376 !important;
+    line-height: 1;
+}
+
+.single_product_item p {
+    line-height: 1.7;
+}
+
+.btn-3 {
+    padding: 12px;
+}
+
+.product_image_area .single_product_text {
+    margin: 30px 0 30px;
+}
+
+hr {
+    border: 1px solid #B08EAD;
+}
+
+.add_to_cart p {
+    margin: 5px;
+}
+
+.product_image_area .single_product_text p {
+    margin-top: 30px;
+    color: #707070;
+}
+
+.price {
+    margin-top: 10px !important;
+}
