--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>cart list</h2>
+                    <h2>Your shopping cart</h2>
                 </div>
             </div>
         </div>
@@ -22,120 +22,88 @@
 <div class="container">
   <div class="cart_inner">
     {% if cart_items %}
-    <div>{{ cart_items }}</div>
-    
+
     <div class="table-responsive">
       
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">Product</th>
+            <th scope="col">Painting</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
-            <th scope="col">Total</th>
+            <th scope="col" id="number-align-right">Total</th>
           </tr>
         </thead>
         <tbody>
+          {% for item in cart_items %}
           <tr>
             <td>
               <div class="media">
                 <div class="d-flex">
-                  <img src="img/arrivel/arrivel_1.png" alt="" />
+                  <img src="{{ item.product.image.url }}" alt="{{ item.product.name}} {{ item.product.technique }}" />
                 </div>
                 <div class="media-body">
-                  <p>Minimalistic shop for multipurpose use</p>
+                  <p>Title: {{ item.product.name}}</p>
+                  <p>Category: {{ item.product.category.friendly_name}}</p>
+                  <p>Dimension: {{ item.product.size}}</p>
                 </div>
               </div>
             </td>
             <td>
-              <h5>$360.00</h5>
+              <h5>€{{ item.product.price }}</h5>
             </td>
             <td>
               <div class="product_count">
-                <input type="text" value="1" min="0" max="10" title="Quantity:"
-                  class="input-text qty input-number" />
-                <button
-                  class="increase input-number-increment items-count" type="button">
-                  <i class="ti-angle-up"></i>
-                </button>
-                <button
-                  class="reduced input-number-decrement items-count" type="button">
-                  <i class="ti-angle-down"></i>
-                </button>
-                <span class="input-number-decrement"> <i class="ti-minus"></i></span>
-                <input class="input-number" type="text" value="1" min="0" max="10">
-                <span class="input-number-increment"> <i class="ti-plus"></i></span>
+                <p class="input-text qty input-number" title="Quantity">1</p>
+                <!-- <input type="number hidden" value="1" min="0" max="1" title="Quantity:"
+                  class="input-text qty input-number" /> -->
+
               </div>
             </td>
             <td>
-              <h5>$720.00</h5>
+              <h5 id="number-align-right">€{{ item.product.price }}</h5>
             </td>
           </tr>
+          {% endfor %}
 
-          <tr class="bottom_button">
-            <td>
-              <a class="btn_1" href="#">Update Cart</a>
-            </td>
+          <tr>
             <td></td>
+            <td><h5>Subtotal</h5></td>
             <td></td>
             <td>
-              <div class="cupon_text float-right">
-                <a class="btn_1" href="#">Close Coupon</a>
-              </div>
+              <h5 id="number-align-right">€{{ total|floatformat:2 }}</h5>
             </td>
           </tr>
           <tr>
             <td></td>
+            <td><h5>Delivery Flat Rate</h5></td>
             <td></td>
             <td>
-              <h5>Subtotal</h5>
-            </td>
-            <td>
-              <h5>$2160.00</h5>
+              <h5 id="number-align-right">€40.00</h5>
             </td>
           </tr>
-          <tr class="shipping_area">
-            <td></td>
+          <tr>
             <td></td>
             <td>
-              <h5>Shipping</h5>
-            </td>
+              <h5>Grand Total</h5></td>
+            <td></td>
             <td>
-              <div class="shipping_box">
-                <ul class="list">
-                  <li>
-                    Flat Rate: $5.00
-                    <input type="radio" aria-label="Radio button for following text input">
-                  </li>
-                  <li>
-                    Free Shipping
-                    <input type="radio" aria-label="Radio button for following text input">
-                  </li>
-                  <li>
-                    Flat Rate: $10.00
-                    <input type="radio" aria-label="Radio button for following text input">
-                  </li>
-                  <li class="active">
-                    Local Delivery: $2.00
-                    <input type="radio" aria-label="Radio button for following text input">
-                  </li>
-                </ul>
-                <input class="post_code" type="text" placeholder="Postcode/Zipcode" />
-                <a class="btn_1" href="#">Update Details</a>
-              </div>
+              <h5 id="number-align-right">€{{ grand_total|floatformat:2 }}</h5>
             </td>
           </tr>
+
         </tbody>
       </table>
-
+      <div class="checkout_btn_inner float-right">
+        <a class="btn_1" href="{% url 'products' %}">Continue Shopping</a>
+        <a class="btn_1 checkout_btn_1" href="#">Proceed to checkout</a>
+      </div>
     
     {% else %}
         <p><h6>Your shopping cart is empty.</h6></p>
-        <div class="checkout_btn_inner float-right">
-        <a class="btn_1" href="#">Continue Shopping</a>
+        
     {% endif %}
-        <a class="btn_1 checkout_btn_1" href="#">Proceed to checkout</a>
-      </div>
+
     </div>
   </div>
 </section>
