--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,8 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Hanneles Original Art</h1>
-                            <p>Why put tasteless prints on your wall </p>
-                            <p>when you can get original paintings?</p>
+                            <p>Why put tasteless prints on your wall
+                            when you can get original paintings?</p>
                             <a href="{% url 'products' %}" class="btn_1">Buy real art here!</a>
                         </div>
                     </div>
