--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -28,7 +28,7 @@
                             <div class="col-lg-4 col-sm-4">
                                 <div class="single_sedebar">
                                     <div class="select_option select_option_bottom">
-                                        <div class="select_option_list dropdown_select">Select Category <i class="right fas fa-caret-down"></i> </div>
+                                        <div class="select_option_list dropdown_select pointer">Select Category <i class="right fas fa-caret-down"></i> </div>
                                         <div class="select_option_dropdown">
                                             <p><a href="{% url 'products' %}?category=flowers">Flowers</a></p>
                                             <p><a href="{% url 'products' %}?category=animals">Animals</a></p>
@@ -44,7 +44,7 @@
                             <div class="col-lg-4 col-sm-4">
                                 <div class="single_sedebar">
                                     <div class="select_option">
-                                        <div class="select_option_list dropdown_select">Select Format <i class="right fas fa-caret-down"></i> </div>
+                                        <div class="select_option_list dropdown_select pointer">Select Format <i class="right fas fa-caret-down"></i> </div>
                                         <div class="select_option_dropdown">
                                             <p><a href="{% url 'products' %}?format=Portrait">Portrait</a></p>
                                             <p><a href="{% url 'products' %}?format=Landscape">Landscape</a></p>
@@ -56,7 +56,7 @@
                             <div class="col-lg-4 col-sm-4">
                                 <div class="single_sedebar">
                                     <div class="select_option">
-                                        <div class="select_option_list dropdown_select">Sort by Price <i class="right fas fa-caret-down"></i> <i class="right fas fa-caret-up"></i> </div>
+                                        <div class="select_option_list dropdown_select pointer">Sort by Price <i class="right fas fa-caret-down"></i> <i class="right fas fa-caret-up"></i> </div>
                                         <div class="select_option_dropdown">
                                             <p><a href="{% url 'products' %}?sort=price&direction=asc">Low to high</a></p>
                                             <p><a href="{% url 'products' %}?sort=price&direction=desc">High to low</a></p>
