--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -54,24 +54,11 @@
             </td>
             <td>
               <div class="product_count">
-
-                <form action="{% url 'update_cart' item.item_id %}" method="POST" class="form update-form">
-                  {% csrf_token %}
-                  <span class="input-number-decrement decrement-qty pointer" data-item_id="{{ item.item_id }}"
-                    id="decrement-qty_{{ item.item_id }}"><i class="ti-minus"> </i></span>
-                  <input class="input-number form-control qty_input" name="quantity" type="number"
-                    value="{{ item.quantity }}" min="0" max="1" data-item_id="{{ item.item_id }}"
-                    id="id_qty_{{ item.item_id }}">
-                  <span class="input-number-increment increment-qty pointer" data-item_id="{{ item.item_id }}"
-                    id="increment-qty_{{ item.item_id }}">
-                    <i class="ti-plus"> </i></span>
-                </form>
-            
+                <div class="quantity-remove">
+                <a class="quantity" name="quantity" aria-label="Quantity" id="quantity">{{ item.quantity }}</a>
+                <a class="remove-item" title="Remove item" aria-label="Remove" id="remove_{{ item.item_id }}"><i class="fa-solid fa-trash"></i></a>
+                </div>
               </div>
-              <p class="update-remove">
-                <a class="update-link" aria-label="Update"><i class="fa-solid fa-arrows-rotate">  </i></a>
-                <a class="remove-item" aria-label="Remove" id="remove_{{ item.item_id }}">   <i class="fa-solid fa-trash"></i></a>
-              </p>
             </td>
             
             <td>
@@ -130,12 +117,6 @@
 {% include 'cart/includes/quantity_input_script.html' %}
 
 <script type="text/javascript">
-  //Update quantity on click
-  $('.update-link').click(function(e) {
-    var form = $(this).prev('.update-form');
-    form.submit();
-  })
-
   //Remove item and reload on click
   $('.remove-item').click(function(e) {
     var csrfToken = "{{ csrf_token }}";
