--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,9 +22,7 @@
 <div class="container">
   <div class="cart_inner">
     {% if cart_items %}
-
-    <div class="table-responsive">
-      
+    <div class="table-responsive">    
       <table class="table">
         <thead>
           <tr>
@@ -97,7 +95,7 @@
       </table>
       <div class="checkout_btn_inner float-right">
         <a class="btn_1" href="{% url 'products' %}">Continue Shopping</a>
-        <a class="btn_1 checkout_btn_1" href="#">Proceed to checkout</a>
+        <a class="btn_1 checkout_btn_1" href="{% url 'checkout' %}">Proceed to checkout</a>
       </div>
     
     {% else %}
