Add loading overlay on checkout template

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -21,6 +21,14 @@
 </section>
 <!-- breadcrumb part end-->
 
+<div id="loading-overlay">
+    <h1 class="text-light logo-font loading-spinner">
+        <span class="icon">
+            <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+        </span>
+    </h1>
+</div>
+
 <!--================Checkout Area =================-->
 <section class="cart_area section_padding">
 <div class="container">
