--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,8 +77,7 @@ hr {
 .message-container {
     position: fixed;
     top: 100px;
-    left: 50%;
-    transform: translate(-50%, 0);
+    margin-right: 30px;
     width: 400px;
     z-index: 5000;
 }
