--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -34,7 +34,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <p class="text-muted"><h5>Order Summary:</h5></p>
+            <p class="text-muted"><h5 id="h5-padding">Order Summary:</h5></p>
             <div class="row">
                 <div class="col-7 offset-2">
                     <p class="mb-1 mt-0 small text-muted">Item</p>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="col-12 col-lg-6">
-            <p class="text-muted"><h5>Please fill out the form to complete your order.</h5></p>
+            <p class="text-muted"><h5 id="h5-padding">Please fill out the form to complete your order.</h5></p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
