--- a/templates/base.html
+++ b/templates/base.html
@@ -194,7 +194,7 @@
             <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
             <!-- carousel js -->
             <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-            <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+            <!-- <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> -->
             <!-- slick js -->
             <script src="{% static 'js/slick.min.js' %}"></script>
             <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
