--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,16 +1,16 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
 
     <!-- Then put toasts within -->
-    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="10000">
-      <div class="toast-header alert alert-success">
+    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="7000">
+      <div class="toast-header alert">
         <i class="fa-regular fa-circle-check"> </i>
         <strong class="mr-auto">Success!</strong>
         <hr>
-        <button type="button" class="ml-2 mb-1 success close" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="toast-body">
+      <div class="toast-body text-success">
         {{ message }}
       </div>
     </div>
