--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -6,11 +6,11 @@
         <i class="fa-solid fa-triangle-exclamation"> </i>
         <strong class="mr-auto">Warning!</strong>
         <small>11 mins ago</small>
-        <button type="button" class="ml-2 mb-1 warning close" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="toast-body">
+      <div class="toast-body text-warning">
         {{ message }}
       </div>
     </div>
