Update Allauth templates and navigation

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,7 @@ hr {
     padding: 50px 0px;
 }
 
+/* Allauth form formatting */
 .allauth-form-inner-content label:not([for='id_remember']) {
     display: none;
 }
