--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,7 +5,9 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
+<hr>
 <h2>{% trans "Sign Up" %}</h2>
+<hr>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
@@ -15,7 +17,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btn" type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btn_3" type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <a class="btn_3" href="{% url 'home' %}">Home</a>
 </form>
 
 {% endblock %}
