--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -25,6 +25,10 @@
 <section class="cart_area section_padding">
 <div class="container">
     <div class="row">
+        <div class="col-8">
+            <hr>
+            {{ profile }}
+        </div>
 
 
     </div>
