--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
   <!-- breadcrumb part start-->
@@ -15,7 +16,7 @@
 </section>
 <!-- breadcrumb part end-->
 <!--================login_part Area =================-->
-<section class="login_part section_padding">
+<!-- <section class="login_part section_padding"> -->
     <div class="container">
         <div class="row align-items-center">            
             <div class="col-lg-8 col-md-8">
@@ -30,6 +31,6 @@
             </div>
         </div>
     </div>
-</section>
+<!-- </section> -->
 <!--================login_part end =================-->
 {% endblock %}
