--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -124,7 +124,7 @@
                     <button id="submit-button" class="btn_1 checkout_btn_1"><span class="font-weight-bold">Complete Order </span>
                         <span class="icon"><i class="fas fa-lock"></i></span>
                     </button>
-                    <p class="small text-secondary my-0">
+                    <p class="small text-secondary float-right my-0">
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
