--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -63,22 +63,33 @@
         </div>
         <hr>
         {% if product.sold is True %}
-        <p class="text-sold">sold</p>
+        <p class="text-uppercase">sold</p>
         {% else %}
           <div class="add_to_cart">
             <h4>Price:</h4>             
                 <p class="price">€ {{ product.price }}</p>
+                <div class="row">
+                  <div class="col-12">
+                    <span>
                 <form class="form" method="POST" action="{% url 'add_to_cart' product.id %}">
                   {% csrf_token %}
                   <input class="form-control qty-input" type="hidden" name="quantity" 
                     value="1" min="0" max="1" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                    <div class="btn-group">
               <input type="submit" class="btn_3" value="Add to cart">  
               <a href="{% url 'products' %}" class="btn_3">Continue shopping</a>
               <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </form>
-          </div>
         {% endif %}  
+        {% if request.user.is_superuser %}
 
+            <a href="{% url 'edit_product' product.id %}" class="btn_3" title="Update">Update</a>
+            <a href="{% url 'delete_product' product.id %}" class="btn_3" title="Delete">Delete</a>
+        {% endif %}
+      </span>
+    </div>
+      </div>
+    </div>
       </div>
     </div>
   </div>
